--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <br>
                     <div class="row listedates">
                         <div class="col-12 col-md-10 offset-md-1">
-                            <!--<<ul class="list-group prochaines-dates">
+                            <!--<ul class="list-group prochaines-dates">
                                  li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
@@ -211,8 +211,8 @@
                                     </div>
                                 </li> 
                             </ul> 
-                            <br>
-                            <ul class="list-group prochaines-dates">
+                            <br>-->
+           <!--                  <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
@@ -248,7 +248,8 @@
                                     </div>
                                 </li>
                             </ul>
-                            <br>
+                            <br> -->
+                            <!--
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
@@ -286,6 +287,80 @@
                                 </li>
                             </ul>
                             <br>-->
+                            <ul class="list-group prochaines-dates">
+                                <li class="list-group-item">
+                                    <div class="row">
+                                        <div class="col-12 col-md-2 date-jour-mois text-center">
+                                            <span class="float-xs-right"><span class="date-jour">02</span>
+                                            <br><span class="date-mois">NOV</span></span>
+                                        </div>
+                                        <div class="col-12 col-md-6">
+                                            <p class="date">
+                                                <span class="date-lieu">Labastide Saint Sernin (31)</span> - <span class="date-date">samedi 02 novembre</span> à
+                                                <span class="date-heure">20h30</span>
+                                                <br>
+                                                <span class="date-lieu">Salle des fêtes</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/rivLSzfGmijw4qV39">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/..../">Réservations</a></span>
+                                            </p>
+                                        </div>
+                                        <div class="col-12 col-md-4 text-center">
+                                            <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
+                                                <a class="atcb-link">Ajouter au calendrier</a>
+                                                <var class="atc_event">
+                                                <var class="atc_date_start">2019-11-02 20:30:00</var>
+                                                <var class="atc_date_end">2019-11-02 22:00:00</var>
+                                                <var class="atc_timezone">Europe/Paris</var>
+                                                <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+
+                                                A partir de 10-12 ans
+                                                </var>
+                                                <var class="atc_location">Salle des fêtes Labastide Saint Sernin</var>
+                                                <var class="atc_organizer">Cie Mesdames A</var>
+                                                <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
+                                                </var>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <br>
+                            <ul class="list-group prochaines-dates">
+                                <li class="list-group-item">
+                                    <div class="row">
+                                        <div class="col-12 col-md-2 date-jour-mois text-center">
+                                            <span class="float-xs-right"><span class="date-jour">30</span>
+                                            <br><span class="date-mois">NOV</span></span>
+                                        </div>
+                                        <div class="col-12 col-md-6">
+                                            <p class="date">
+                                                <span class="date-lieu">Villasavary (11)</span> - <span class="date-date">samedi 30 novembre</span> à
+                                                <span class="date-heure">20h30</span>
+                                                <br>
+                                                <span class="date-lieu">Les Halles</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/TQdqa1VCeXDoWPrH7">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/..../">Réservations</a></span>
+                                            </p>
+                                        </div>
+                                        <div class="col-12 col-md-4 text-center">
+                                            <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
+                                                <a class="atcb-link">Ajouter au calendrier</a>
+                                                <var class="atc_event">
+                                                <var class="atc_date_start">2019-11-30 20:30:00</var>
+                                                <var class="atc_date_end">2019-11-30 22:00:00</var>
+                                                <var class="atc_timezone">Europe/Paris</var>
+                                                <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+
+                                                A partir de 10-12 ans
+                                                </var>
+                                                <var class="atc_location">Halles municipales de Villasavary</var>
+                                                <var class="atc_organizer">Cie Mesdames A</var>
+                                                <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
+                                                </var>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <!--<br>
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
@@ -388,8 +463,8 @@
                                             </span>
                                         </div>
                                     </div>
-                                </li>
-                            </ul>
+                                </li> 
+                            </ul>-->
                         </div>
                     </div>
                 </div>
@@ -407,7 +482,10 @@
                         <h2><i class="fas fa-bolt" style="color: #f33128;" aria-hidden="true"></i> ÉCLAIRS <i class="fas fa-bolt" aria-hidden="true" style="color: #f33128;"></i></h2>
                         <div class="row">
                             <div class="col-md-8">
-                                <p><small>Saison 2018-2019</small></p>
+                                <p><small>Saison 2018-2019 and 2019-2020</small></p>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/325242505"></iframe>
+                                </div>
                                 <p><small>théâtre-concert-danse</small><br><br>
                                 Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                                 <br>
@@ -600,6 +678,8 @@
                                                     <li><b>2019</b></li>
                                                     <li>- 25 janvier, Escalquens (31)</li>
                                                     <li>- 11 au 13 avril, Le Ring, Toulouse (31)</li>
+                                                    <li>- 02 novembre, Labastide Saint Sernin (31)</li>
+                                                    <li>- 30 novembre, Villasavary (11)</li>
                                                 </ul>
                                             </div>
                                         </div>
