--- a/index.html
+++ b/index.html
@@ -480,14 +480,14 @@
                     <!--ECLAIRS-->
                     <div class="creations eclairs" id="eclairs">
                         <h2><i class="fas fa-bolt" style="color: #f33128;" aria-hidden="true"></i> ÉCLAIRS <i class="fas fa-bolt" aria-hidden="true" style="color: #f33128;"></i></h2>
+                        <p><small>Saison 2018-2019 and 2019-2020</small><br>
+                        <small>théâtre-concert-danse</small><br><br></p>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/325242505"></iframe>
+                        </div>
                         <div class="row">
                             <div class="col-md-8">
-                                <p><small>Saison 2018-2019 and 2019-2020</small></p>
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/325242505"></iframe>
-                                </div>
-                                <p><small>théâtre-concert-danse</small><br><br>
-                                Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
+                                <p>Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                                 <br>
                                 <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe></p>
                             </div>
