--- a/index.html
+++ b/index.html
@@ -481,10 +481,11 @@
                     <div class="creations eclairs" id="eclairs">
                         <h2><i class="fas fa-bolt" style="color: #f33128;" aria-hidden="true"></i> ÉCLAIRS <i class="fas fa-bolt" aria-hidden="true" style="color: #f33128;"></i></h2>
                         <p><small>Saison 2018-2019 and 2019-2020</small><br>
-                        <small>théâtre-concert-danse</small><br><br></p>
+                        <small>théâtre-concert-danse</small></p>
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/325242505"></iframe>
                         </div>
+                        <br>
                         <div class="row">
                             <div class="col-md-8">
                                 <p>Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
