--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                 </li>
                             </ul>
                             <br>-->
-                            <ul class="list-group prochaines-dates">
+                           <!--  <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
@@ -323,7 +323,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <br>
+                            <br> -->
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
@@ -333,7 +333,7 @@
                                         </div>
                                         <div class="col-12 col-md-6">
                                             <p class="date">
-                                                <span class="date-lieu">Villasavary (11)</span> - <span class="date-date">samedi 30 novembre</span> à
+                                                <span class="date-lieu">Concert Villasavary (11)</span> - <span class="date-date">samedi 30 novembre</span> à
                                                 <span class="date-heure">20h30</span>
                                                 <br>
                                                 <span class="date-lieu">Les Halles</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/TQdqa1VCeXDoWPrH7">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/452428628926072/">Réservations</a></span>
