--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                         </div>
                                         <div class="col-12 col-md-6">
                                             <p class="date">
-                                                <span class="date-lieu">Concert Villasavary (11)</span> - <span class="date-date">samedi 30 novembre</span> à
+                                                <span class="date-lieu">Concert - Villasavary (11)</span> - <span class="date-date">samedi 30 nov.</span> à
                                                 <span class="date-heure">20h30</span>
                                                 <br>
                                                 <span class="date-lieu">Les Halles</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/TQdqa1VCeXDoWPrH7">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/452428628926072/">Réservations</a></span>
