--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>Pour la saison 2018-2019, nous présentons <i>ÉCLAIRS</i> notre dernière création, au théâtre Le Pari à Tarbes, à Lapanouse, Villasavary, Escalquens, puis au théâtre Le Ring à Toulouse.<br>
+                    <p>Sur la saison 2019-2020 la compagnie poursuit ses actions culturelles et prépare sa prochaine création.<br>
                     <br>
                     <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
                     </p>
@@ -1418,7 +1418,9 @@
                     <h1>Contact</h1>
                     <p class="contact-section"> Vous pouvez nous contacter&nbsp;:<br></p>
                     <ul class="production">
-                        <li  class="contact-section">par mail&nbsp;<i class="fas fa-envelope" aria-hidden="true"></i>&nbsp;:&nbsp;&nbsp;cie.mesdames.a&nbsp;<i class="fas fa-at"></i>&nbsp;gmail.com<br></li>
+                        <li  class="contact-section">par mail 
+                            <!-- &nbsp;<i class="fas fa-envelope" aria-hidden="true"></i>&nbsp; -->
+                            :&nbsp;&nbsp;cie.mesdames.a <i class="fas fa-at"></i>&nbsp;gmail.com<br></li>
                         <li  class="contact-section">ou en utilisant le formulaire suivant&nbsp;:</li>
                     </ul>
                         <form method="POST" action="http://formspree.io/cie.mesdames.a@gmail.com">
