--- a/index.html
+++ b/index.html
@@ -159,20 +159,21 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>Sur la saison 2019-2020 la compagnie poursuit ses actions culturelles et prépare sa prochaine création.<br>
+                    <p>Sur la saison 2019-2020 la compagnie poursuit ses actions culturelles et prépare sa prochaine création.</p>
+<!--                     <br>
                     <br>
                     <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
-                    </p>
-                    <div class="row tweets">
+                    </p> -->
+<!--                     <div class="row tweets">
                         <div class="col-11 col-sm-9 col-md-8 col-lg-7">
                             <p><a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders noheader transparent" data-tweet-limit="3" data-show-replies="false">Nos tweets récents</a></p>
                             <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
-                    </div>
-                    <h3>Dates 2019-2020 pour <i>ÉCLAIRS</i></h3>
+                    </div> -->
+<!--                     <h3>Dates 2019-2020 pour <i>ÉCLAIRS</i></h3>
                     <br>
                     <div class="row listedates">
-                        <div class="col-12 col-md-10 offset-md-1">
+                        <div class="col-12 col-md-10 offset-md-1"> -->
                             <!--<ul class="list-group prochaines-dates">
                                  li class="list-group-item">
                                     <div class="row">
@@ -324,7 +325,7 @@
                                 </li>
                             </ul>
                             <br> -->
-                            <ul class="list-group prochaines-dates">
+           <!--                  <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
@@ -359,7 +360,7 @@
                                         </div>
                                     </div>
                                 </li>
-                            </ul>
+                            </ul> -->
                             <!--<br>
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
@@ -465,8 +466,8 @@
                                     </div>
                                 </li> 
                             </ul>-->
-                        </div>
-                    </div>
+           <!--              </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -490,7 +491,8 @@
                             <div class="col-md-8">
                                 <p>Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                                 <br>
-                                <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe></p>
+                                <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe> 
+                            </p>
                             </div>
                             <div class="col-md-4">
                                 <img src="creations/eclairs/media/images/affiche_sm.jpg" alt="ÉCLAIRS - Affiche" class="img-fluid">
