--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
                     </p>
                     <div class="logo-contact">
                         <ul class="social-network social-circle">
-                            <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                         </ul>
                     </div>
