--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>La Compagnie a dû annuler la tournée 20-21 d'<i>Éclairs</i> et travaille actuellement sur deux nouvelles créations.'</p>
+                    <p>La Compagnie a dû annuler la tournée 20-21 d'<i>Éclairs</i> et travaille actuellement sur deux nouvelles créations.</p>
 <!--                     <br>
                     <br>
                     <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
