--- a/index.html
+++ b/index.html
@@ -99,15 +99,19 @@
                         <div class="col-md-9 col-xl-7 offset-xl-2">
                             <p class="intro-text text-center">
                                 Mesdames A est une compagnie de spectacle vivant. Elle fait discuter musique, danse et théâtre dans ses créations.<br>
-                                Découvrez <a class="page-scroll" href="#creations"><i>ÉCLAIRS</i>, notre dernière création</a>.
+                                Découvrez <a class="page-scroll" href="#creations"><i>ÉCLAIRS</i>, notre dernière création</a>.    
                             </p>
+                        
                         </div>
-                        <div class="col-md-3 col-xl-3 bouttonsoutien">
-                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal-soutenir-adhesion">
+                       <div class="col-md-3 col-xl-3 bouttonsoutien">
+                            <br><br>
+                            <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-compagnie-mesdames-a-2021/widget-bouton" style="width:100%;height:70px;border:none;"></iframe>
+                           <!--  <button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal-soutenir-adhesion">
                                 <span class="txt-nous-soutenir">Nous soutenir</span><br>
                                 <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span>
-                            </button><br>
+                            </button><br> -->
                         </div>
+                         <!-- 
                         <div id="modal-soutenir-adhesion" class="modal fade" role="dialog">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -117,11 +121,12 @@
                                     </div>
 
                                     <div class="modal-body">
-                                        <iframe id="haWidget" src="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-association-mesdames-a/widget" style="width:100%;height:750px;border:none;" onload="window.scroll(0, document.querySelector('iframe').offsetTop)"></iframe>
+                                        <iframe id="haWidget" src="https://www.helloasso.com/associations/compagnie-mesdames-a/adhesions/adhesion-association-mesdames-a/widget" style="width:100%;height:750px;border:none;" onload="window.scroll(0, document.querySelector('iframe').offsetTop)"></iframe> 
+                                       
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
