--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -94,11 +94,35 @@
 
                         <h2>Galerie</h2>
                             <div id="galvoyages">
-                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/animation-sorcières.jpg" title="Voyages dans le temps- Sorcieres" >
-                                    <img src="media/images/animation-sorcières-sm.jpg" alt="Voyages dans le temps - Sorcieres" width="180">
+                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/animation-sorcieres.jpg" title="Voyages dans le temps - Sorcieres">
+                                    <img src="media/images/animation-sorcieres-sm.jpg" alt="Voyages dans le temps - Sorcieres" width="180">
                                 </a>
-                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/cuisine.jpg" title="Voyages dans le temps- Cuisine" >
+                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/cuisine.jpg" title="Voyages dans le temps - Cuisine">
                                     <img src="media/images/cuisine-sm.jpg" alt="Voyages dans le temps - Cuisine" width="180">
+                                </a>
+                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/espices.jpg" title="Voyages dans le temps - Épices">
+                                    <img src="media/images/espices-sm.jpg" alt="Voyages dans le temps - Épices" width="180">
+                                </a>
+                                  <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/en-public.jpg" title="Voyages dans le temps - En public" >
+                                    <img src="media/images/en-public-sm.jpg" alt="Voyages dans le temps - En public" width="180">
+                                </a>
+                                     <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/en-public2.jpg" title="Voyages dans le temps - En public" >
+                                    <img src="media/images/en-public2-sm.jpg" alt="Voyages dans le temps - En  public" width="180">
+                                </a>
+                                  <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/danses-1.jpg" title="Voyages dans le temps - Danses" >
+                                    <img src="media/images/danses-1-sm.jpg" alt="Voyages dans le temps - Danses" width="180">
+                                </a>
+                                  <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/danses-2.jpg" title="Voyages dans le temps - Danses" >
+                                    <img src="media/images/danses-2-sm.jpg" alt="Voyages dans le temps - Danses" width="180">
+                                </a>
+                                  <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/danses-3.jpg" title="Voyages dans le temps - Danses" >
+                                    <img src="media/images/danses-3-sm.jpg" alt="Voyages dans le temps - Danses" width="180">
+                                </a>
+                                  <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/detail-inspiration-maria-de-medicis.jpg" title="Voyages dans le temps - Détail robe" >
+                                    <img src="media/images/detail-inspiration-maria-de-medicis-sm.jpg" alt="Voyages dans le temps - Danses" width="180">
+                                </a>
+                                <a data-gallery="#blueimp-gallery-galvoyages" href="media/images/ea-maria-de-medici-portrait.jpg" title="Voyages dans le temps - Inspiration robe - Marie de Médicis" >
+                                    <img src="media/images/ea-maria-de-medici-portrait-sm.jpg" alt="Voyages dans le temps - Danses" width="180">
                                 </a>
                             </div>
 
