--- a/index-bs5.html
+++ b/index-bs5.html
@@ -67,7 +67,17 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon me-auto"></span> -->
         </button>
-      
+      <!--
+        --
+        --
+        --
+        --
+        --TEST ICI
+        test d-flex pour pousser la nav a droite--
+        --
+        --
+        --
+    -->
         <div class="collapse navbar-collapse d-flex" id="navbarToggler">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0 smooth-scroll">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
