--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -102,7 +102,7 @@
 
                                 <div class="clearfix">
                                 <h3>Vie précieuse au château</h3>
-                                <img src="media/images/media/images/vie-de-faste-17eme2-2.jpg.jpg" class="col-sm-5 float-sm-start mb-3 me-sm-3 img-fluid" alt="Vie de faste 17ème">
+                                <img src="media/images/vie-de-faste-17eme2-2.jpg" class="col-sm-5 float-sm-start mb-3 me-sm-3 img-fluid" alt="Vie de faste 17ème">
                                 <p>Pourquoi faut-il lire Molière avec l'accent Québécois ? Pourquoi écrit-on asthme, et pas asme ? Pourquoi portait-on un vertugadin ? Et d'ailleurs, c'est quoi ?  <br>
                                 Partez à la rencontre des résidents du château en plein âge d'or : costumes, musique et inventions : découvrez les origines du classicisme français !</p>
                                 </div>
