intro text + typo

--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -85,7 +85,7 @@
                         <p><small>Saisons 2007 à 2021</small></p>
                         
                                 <p>
-                                Pour chacun de ces voyages temporels, deux comédien·ne·s mettent en jeu des personnages hauts en couleur pour animer vos espaces patrimoniaux. Ludiques, originaux et dynamiques, ces voyages s'appuient sur les outils du théâtre pour rendre l'Histoire accessible aux petits et aux grands. Riches d'une grande rigueur historique, il feront voler en éclats les clichés sur chaque époque. Les comédien·ne·s entraînent le public dans une ambiance unique et lui font vivre une expérience inoubliable !</p>
+                                Pour chacun de ces voyages temporels, deux comédien·ne·s mettent en jeu des personnages hauts en couleur pour animer vos espaces patrimoniaux. Ludiques, originaux et dynamiques, ces voyages s'appuient sur les outils du théâtre pour rendre l'Histoire accessible aux petits et aux grands. Riches d'une grande rigueur historique, ils feront voler en éclats les clichés sur chaque époque. Les comédien·ne·s entraînent le public dans une ambiance unique et lui font vivre une expérience inoubliable !</p>
 
                                     <!--Video-->
                                     <div class="ratio ratio-16x9">
