--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
                             <p class="intro-text text-center">
-                                Mesdames A est une compagnie de spectacle vivant. Elle fait discuter musique, danse et théâtre dans ses créations.<br>
-                                Découvrez <a class="page-scroll" href="#creations"><i>ÉCLAIRS</i>, notre dernière création</a>.    
+                                 Mesdames A est une compagnie de spectacle vivant. Elle fait discuter musique, danse et théâtre dans ses créations.<br>
+                                Découvrez nos <a href="./creations/voyages/index.html"><i>Voyages dans le temps</i></a>.    
                             </p>
                         
                         </div>
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>La Compagnie a dû annuler la tournée 20-21 d'<i>Éclairs</i> et travaille actuellement sur deux nouvelles créations.</p>
+                    <p>En 2021-2022, la Compagnie poursuit la diffusion de ses <a href="/creations/voyages/index.html"><i>Voyages dans le temps</i></a>, crée des <i>Contes du monde</i> en musique et collabore à la création des <i>Fâcheux</i> de Molière en partenariat avec l'UT2J.</p>
 <!--                     <br>
                     <br>
                     <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
