fix dates le commencement
fix + re ajout jquery 3.7

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
                     <p>En 2022-2023, la Compagnie poursuit la diffusion de ses <a href="./creations/voyages/index.html"><i>Voyages dans le temps</i></a> et de son dernier spectacle <a href="https://www.tourisme-aveyron.com/fr/diffusio/agenda/spectacle-le-commencement-au-chateau-de-severac-severac-d-aveyron_TFO482844321539"><i>Le Commencement</i></a>.</p>
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FMesdamesA%2Fposts%2Fpfbid0XY8xpWYkhmV5t9rr8JYH2N6UPowg3nh5L4xTwaXdhJRiqBmsHLvS4B2QTFp1NJZkl&show_text=true&width=500" width="500" height="444" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                    <p class="text-center"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FMesdamesA%2Fposts%2Fpfbid0XY8xpWYkhmV5t9rr8JYH2N6UPowg3nh5L4xTwaXdhJRiqBmsHLvS4B2QTFp1NJZkl&show_text=true&width=400" width="400" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p>
                     <!-- <div class="fb-post" data-href="https://www.facebook.com/pfbid0XY8xpWYkhmV5t9rr8JYH2N6UPowg3nh5L4xTwaXdhJRiqBmsHLvS4B2QTFp1NJZkl" data-width="500" data-show-text="true"></div> -->
                     <!--                     <br>
                     <br>
@@ -167,7 +167,7 @@
                     <div class="row listedates" data-bs-theme="light">
                         <div class="col-12 col-md-10">
                             <ul class="list-group prochaines-dates">
-                                <li class="list-group-item">
+                                <!--                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
                                             <span class="float-xs-end"><span class="date-jour">20</span>
@@ -203,7 +203,7 @@
                                             </span>
                                         </div>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
@@ -1494,6 +1494,7 @@
     </script>
 </body>
 <!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js" integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
 <!-- Blueimp gallery JS -->
 <!-- <script src="js/jquery.blueimp-gallery.min.js"></script> -->
