Fix recent years voyages 2021->2023

--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8">
@@ -76,7 +76,7 @@
                     <!--Voyages dans le temps-->
                     <div class="creations voyages" id="voyages">
                         <h1>Voyages dans le temps</h1>
-                        <p><small>Saisons 2007 à 2021</small></p>
+                        <p><small>Saisons 2007 à 2023</small></p>
                         <p>
                             Pour chacun de ces voyages temporels, deux comédien·ne·s mettent en jeu des personnages hauts en couleur pour animer vos espaces patrimoniaux. Ludiques, originaux et dynamiques, ces voyages s'appuient sur les outils du théâtre pour rendre l'Histoire accessible aux petits et aux grands. Riches d'une grande rigueur historique, ils feront voler en éclats les clichés sur chaque époque. Les comédien·ne·s entraînent le public dans une ambiance unique et lui font vivre une expérience inoubliable !</p>
                         <!--Video-->
